--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com/">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&amp;display=swap">
-    <link rel="stylesheet" href="css/main-combined.css">
+    <link rel="stylesheet" href="css/main.css">
     
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
@@ -400,7 +400,7 @@
           <div class="col-12 ">
             <div class="industries-grid ">
               <div class="row">
-                <div class="col-12 col-lg-4 ">
+                <div class="col-12 col-sm-6 col-lg-4 ">
                   <div class="industry-box" data-subsection="industry-item" data-industry-id="1" id="legal-accounting">
                     <div class="industry-img-wrapper">
                       <img class="parallax-img industry-img" loading="lazy" src="images/Legal-Accounting.webp"
@@ -418,7 +418,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-lg-4 ">
+                <div class="col-12 col-sm-6 col-lg-4 ">
                   <div class="industry-box" data-subsection="industry-item" data-industry-id="2" id="ecommerce-retail">
                     <div class="industry-img-wrapper">
                       <img class="parallax-img industry-img" loading="lazy" src="images/E-commerce-Retail.webp"
@@ -435,7 +435,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-lg-4 ">
+                <div class="col-12 col-sm-6 col-lg-4 ">
                   <div class="industry-box" data-subsection="industry-item" data-industry-id="3" id="property-management">
                     <div class="industry-img-wrapper">
                       <img class="parallax-img industry-img" loading="lazy" src="images/Property-Management-Sales.webp"
@@ -452,7 +452,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-lg-4 ">
+                <div class="col-12 col-sm-6 col-lg-4 ">
                   <div class="industry-box" data-subsection="industry-item" data-industry-id="4" id="trades-field-services">
                     <div class="industry-img-wrapper">
                       <img class="parallax-img industry-img" loading="lazy" src="images/Trades-Field-Services.webp"
@@ -471,7 +471,7 @@
                   </div>
                 </div>
 
-                <div class="col-12 col-lg-4 ">
+                <div class="col-12 col-sm-6 col-lg-4 ">
                   <div class="industry-box" data-subsection="industry-item" data-industry-id="5" id="healthcare">
                     <div class="industry-img-wrapper">
                       <img class="parallax-img industry-img" loading="lazy" src="images/Healthcare-Allied-Services.webp"
@@ -488,7 +488,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-12 col-lg-4 ">
+                <div class="col-12 col-sm-6 col-lg-4 ">
                   <div class="industry-box" data-subsection="industry-item" data-industry-id="6" id="creative-agencies">
                     <div class="industry-img-wrapper">
                       <img class="parallax-img industry-img" loading="lazy" src="images/Studios-Digital-Agencies.webp"
@@ -536,7 +536,7 @@
               <div class="text-area ">
                 <div class="sec-heading  light-title ">
                   <div class="content-area"><span class=" pre-title       wow fadeInUp " data-wow-delay=".2s">Why Choose AAA City</span>
-                    <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Built for Simplicity - <span class='featured-text'>Powered by AI<img src="images/svg/why-choose-us-underline.svg" alt=""></span></h2>
+                    <h2 class=" title    wow fadeInUp" data-wow-delay=".4s">Built for Simplicity – <span class='featured-text'>Powered by AI<img src="images/svg/why-choose-us-underline.svg" alt=""></span></h2>
                   </div>
                 </div>
                 <p class=" about-text">We're your Sydney-based automation experts, dedicated to building intelligent systems that understand the local market and your unique workflows. </p>
