--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -2,19 +2,97 @@
 <html lang="en">
 
 <head>
+    <title>Privacy Policy | AAA City - Business Automation Sydney</title>
+    <meta name="description" content="Read AAA City's Privacy Policy for our AI business automation and workflow automation services in Sydney. Learn how we collect, use, and protect your personal information in compliance with Australian Privacy Act.">
+    <meta name="keywords" content="privacy policy, AAA City privacy, business automation privacy, AI services privacy, data protection, Australian Privacy Act, Sydney automation company privacy">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Privacy Policy for AAA City Website">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <meta name="theme-color" content="#09aff4">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="/sitemap.xml">
+    <link rel="canonical" href="https://www.aaa-city.com/privacy-policy.html" />
+    
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.aaa-city.com/privacy-policy.html" />
+    <meta property="og:title" content="Privacy Policy | AAA City - Business Automation Sydney" />
+    <meta property="og:description" content="Read AAA City's Privacy Policy for our AI business automation and workflow automation services in Sydney. Learn how we collect, use, and protect your personal information in compliance with Australian Privacy Act." />
+    <meta property="og:image" content="https://www.aaa-city.com/images/AAA_City_logo.webp" />
+    <meta property="og:site_name" content="AAA City" />
+    <meta property="og:locale" content="en_AU" />
+    
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://www.aaa-city.com/privacy-policy.html" />
+    <meta name="twitter:title" content="Privacy Policy | AAA City - Business Automation Sydney" />
+    <meta name="twitter:description" content="Read AAA City's Privacy Policy for our AI business automation and workflow automation services in Sydney. Learn how we collect, use, and protect your personal information in compliance with Australian Privacy Act." />
+    <meta name="twitter:image" content="https://www.aaa-city.com/images/AAA_City_logo.webp" />
 
-        <link rel="icon" href="images/favicon.webp">
-        <link rel="preconnect" href="https://fonts.googleapis.com/">
-        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&amp;display=swap">
-        <link rel="stylesheet" href="css/terms-privacy-combined.css">
-        <title>Privacy Policy | AAA City</title>
-        <link rel="canonical" href="https://www.aaa-city.com/privacy-policy.html" />
-  </head>
+    <!-- Structured Data for Legal Document -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebPage",
+      "name": "Privacy Policy",
+      "description": "Privacy Policy for AAA City's AI business automation and workflow automation services in Sydney",
+      "url": "https://www.aaa-city.com/privacy-policy.html",
+      "mainEntity": {
+        "@type": "Article",
+        "@id": "https://www.aaa-city.com/privacy-policy.html#privacy",
+        "headline": "Privacy Policy",
+        "author": {
+          "@type": "Organization",
+          "name": "AAA City",
+          "url": "https://www.aaa-city.com/"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "AAA City",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://www.aaa-city.com/images/AAA_City_logo.webp"
+          }
+        },
+        "datePublished": "2024-06-01",
+        "dateModified": "2024-06-01",
+        "articleSection": "Legal",
+        "about": {
+          "@type": "Thing",
+          "name": "Privacy Policy"
+        }
+      },
+      "breadcrumb": {
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.aaa-city.com/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Privacy Policy",
+            "item": "https://www.aaa-city.com/privacy-policy.html"
+          }
+        ]
+      },
+      "isPartOf": {
+        "@type": "WebSite",
+        "name": "AAA City",
+        "url": "https://www.aaa-city.com/"
+      }
+    }
+    </script>
+
+    <link rel="icon" href="images/favicon.webp">
+    <link rel="preconnect" href="https://fonts.googleapis.com/">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800&amp;display=swap">
+    <link rel="stylesheet" href="css/terms-privacy-combined.css">
+</head>
   <body class="dark-theme">
 
 
