--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                 <div class="row ">
                   <div class="col-12  col-md-6  col-lg-4  portfolio-item mobile " data-subsection="portfolio-item" data-portfolio-id="1">
                     <div class="item   ">
-                      <a class="portfolio-img-link" href="https://www.tdetrading.com.au">
+                      <a class="portfolio-img-link" href="https://www.tdetrading.com.au" target="_blank" rel="noopener noreferrer">
                         <img class="portfolio-img img-fluid" loading="lazy" src="images/portfolio/tdetrading.webp"
                              alt="TDE Trading website portfolio"
                              width="400" height="auto"
@@ -615,7 +615,7 @@
                   </div>
                   <div class="col-12 col-md-6 col-lg-4 portfolio-item mobile">
                     <div class="item" data-subsection="portfolio-item" data-portfolio-id="2">
-                      <a class="portfolio-img-link" href="https://www.dkdental.au">
+                      <a class="portfolio-img-link" href="https://www.dkdental.au" target="_blank" rel="noopener noreferrer">
                         <img class="portfolio-img img-fluid" loading="lazy" src="images/portfolio/DK_Dental_Studio.webp"
                              alt="DK Dental Studio website portfolio"
                              width="400" height="auto"
@@ -629,7 +629,7 @@
                   </div>
                   <div class="col-12 col-md-6 col-lg-4 portfolio-item mobile">
                     <div class="item" data-subsection="portfolio-item" data-portfolio-id="2">
-                      <a class="portfolio-img-link" href="https://www.autoacoustics.au">
+                      <a class="portfolio-img-link" href="https://www.autoacoustics.au" target="_blank" rel="noopener noreferrer">
                         <img class="portfolio-img img-fluid" loading="lazy" src="images/portfolio/AA.webp"
                              alt="DK Dental Studio website portfolio"
                              width="400" height="auto"
