--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>Business Automation Sydney | AI Solutions & Workflow Automation | AAA City</title>
-<meta name="description" content="Unlock efficiency with tailored business automation & AI solutions in Sydney. AAA City offers RPA, AI chatbots, intelligent document processing, and custom AI development to boost your productivity and streamline operations. Contact us today!">
+<meta name="description" content="Expert business automation & AI solutions in Sydney. AAA City delivers RPA, AI chatbots & workflow automation to boost productivity. Contact us today!">
 <meta name="keywords" content="AI solutions Sydney, automation solutions Sydney, business automation Sydney, workflow automation Sydney, process automation Sydney, digital transformation Sydney, custom AI solutions Sydney, AI development Sydney, AI consulting Sydney, intelligent automation Sydney, enterprise automation Sydney, robotic process automation (RPA) Sydney, AI chatbots Sydney, virtual assistants Sydney, intelligent document processing (IDP) Sydney, AI-integrated web development Sydney, custom AI models Sydney, generative AI development Sydney, LLM solutions Sydney, natural language processing (NLP) Sydney, AI workflow automation, custom AI agents, AI call agents, private AI setup, business efficiency Sydney, productivity solutions Sydney, streamline operations Sydney, reduce manual tasks Sydney, eliminate repetitive tasks Sydney, cost reduction automation Sydney, time-saving automation Sydney, error reduction automation Sydney, improved accuracy AI Sydney, enhanced customer service AI Sydney, boost customer satisfaction AI Sydney, lead qualification automation Sydney, 24/7 support, innovation, expertise, efficiency, growth, ROI, scalable solutions, secure automation Sydney, data privacy automation Sydney, GDPR compliant AI Sydney, Australian data privacy solutions Sydney, robust AI systems Sydney, measurable results, intuitive AI systems Sydney, human-first AI Sydney, easy business automation Sydney, user-friendly automation Sydney, no-tech background automation Sydney, real results, little friction, Sydney NSW, Sydney CBD, Parramatta, North Sydney, Inner West Sydney, Eastern Suburbs Sydney, Northern Beaches, Hills District, Western Sydney, South Sydney, Bondi, Chatswood, Australia, Australian data storage, Australian support, local AI experts Sydney, Sydney-based automation company, local AI support Sydney, end-to-end automation Sydney, real-time automation support Sydney, legal automation Sydney, AI for law firms Sydney, legal tech Sydney, document automation legal Sydney, healthcare automation Sydney, AI in healthcare Sydney, medical automation solutions Sydney, real estate automation Sydney, AI for real estate Sydney, property management automation Sydney, trades automation Sydney, industrial automation Sydney, manufacturing automation Sydney, e-commerce automation Sydney, retail automation Sydney, creative studio automation Sydney, accounting automation Sydney">
 
 <meta charset="UTF-8">
@@ -25,10 +25,12 @@
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
-    "@type": "LocalBusiness",
+    "@type": ["LocalBusiness", "ProfessionalService", "TechnologyCompany"],
     "name": "AAA City",
-    "description": "AI Business Automation in Sydney",
-    "image": "images/AAA_City_logo_white_mid.webp",
+    "alternateName": "AAA City Business Automation",
+    "description": "Expert business automation & AI solutions in Sydney. AAA City delivers RPA, AI chatbots & workflow automation to boost productivity.",
+    "image": "https://www.aaa-city.com/images/AAA_City_logo_white_mid.webp",
+    "logo": "https://www.aaa-city.com/images/AAA_City_logo_white_mid.webp",
     "url": "https://www.aaa-city.com/",
     "telephone": "(+61) 411616655",
     "email": "info@aaa-city.com",
@@ -43,21 +45,73 @@
       "latitude": "-33.8688",
       "longitude": "151.2093"
     },
-    "areaServed": {
+    "areaServed": [
+      {
+        "@type": "City",
+        "name": "Sydney",
+        "address": {
+          "@type": "PostalAddress",
+          "addressRegion": "NSW",
+          "addressCountry": "AU"
+        }
+      },
+      {
+        "@type": "State",
+        "name": "New South Wales",
+        "address": {
+          "@type": "PostalAddress",
+          "addressRegion": "NSW",
+          "addressCountry": "AU"
+        }
+      }
+    ],
+    "priceRange": "$$",
+    "currenciesAccepted": "AUD",
+    "paymentAccepted": "Cash, Credit Card, Bank Transfer",
+    "openingHours": "Mo-Fr 09:00-17:00",
+    "foundingDate": "2024",
+    "numberOfEmployees": "1-10",
+    "slogan": "Business Automation & AI Solutions Sydney",
+    "keywords": "business automation, AI solutions, RPA, chatbots, workflow automation, Sydney, NSW, Australia",
+    "serviceArea": {
       "@type": "GeoCircle",
       "geoMidpoint": {
         "@type": "GeoCoordinates",
         "latitude": "-33.8688",
         "longitude": "151.2093"
       },
-      "geoRadius": "50000"
+      "geoRadius": "100000"
     },
-    "priceRange": "$$",
     "sameAs": [
       "https://www.facebook.com/aaacity",
       "https://www.instagram.com/aaacity",
       "https://twitter.com/aaacity"
     ]
+  }
+  </script>
+
+  <!-- Organization Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "AAA City",
+    "url": "https://www.aaa-city.com/",
+    "logo": "https://www.aaa-city.com/images/AAA_City_logo_white_mid.webp",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "(+61) 411616655",
+      "contactType": "customer service",
+      "email": "info@aaa-city.com",
+      "areaServed": "AU",
+      "availableLanguage": "English"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Sydney",
+      "addressRegion": "NSW",
+      "addressCountry": "AU"
+    }
   }
   </script>
 
@@ -1000,6 +1054,9 @@
 
            
             <script src="js/jquery-3.7.1.min.js"></script>
+
+            <!-- Error Handler - Load first for other scripts to use -->
+            <script src="js/error-handler.js"></script>
 
            
             <script src="js/bootstrap.bundle.min.js"></script>
