--- a/index.html
+++ b/index.html
@@ -695,6 +695,20 @@
                       </div>
                     </div>
                   </div>
+                  <div class="col-12 col-md-6 col-lg-4 portfolio-item mobile">
+                    <div class="item" data-subsection="portfolio-item" data-portfolio-id="2">
+                      <a class="portfolio-img-link" href="https://www.kingofthegrill.com.au" target="_blank" rel="noopener noreferrer">
+                        <img class="portfolio-img img-fluid" loading="lazy" src="images/portfolio/KOTG.webp"
+                             alt="DK Dental Studio website portfolio"
+                             width="400" height="auto"
+                             srcset="images/portfolio/KOTG.webp 800w"
+                             sizes="(max-width: 576px) 100vw, (max-width: 992px) 50vw, 400px"/>
+                      </a>
+                      <div class="item-info">
+                        <h4 class="item-title">King of the Grill</h4><i class="flaticon-next icon"></i>
+                      </div>
+                    </div>
+                  </div>
 
               </div>
             </div>
